<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">DS_Calculator</string>
    <string name="hello_world">Hello World</string>
    <string name="drawer_open">menu open</string>
    <string name="drawer_close">menu close</string>
    <string name="title">Arithmetics</string>
    <string name="title_bin">Binary Arithmetics</string>
    <string name="title_date">Date Arithmetics</string>
    <string name="back">←</string>
    <string name="and">AND</string>
    <string name="one">1</string>
    <string name="zero">0</string>
    <string name="c">C</string>
    <string name="or">OR</string>
    <string name="mul">*</string>
    <string name="equ">=</string>
    <string name="xor">XOR</string>
    <string name="plu">+</string>
    <string name="minus">-</string>
    <string name="hex">Hex</string>
    <string name="home">Home</string>
    <string name="divide">/</string>
    <string name="remain">%</string>
    <string name="right"><![CDATA[>>]]></string>
    <string name="left"><![CDATA[<<]]></string>
    <string name="two">2</string>
    <string name="three">3</string>
    <string name="four">4</string>
    <string name="five">5</string>
    <string name="six">6</string>
    <string name="seven">7</string>
    <string name="eight">8</string>
    <string name="nine">9</string>
    <string name="none"></string>
    <string name="sin">sin</string>
    <string name="cos">cos</string>
    <string name="tan">tan</string>
    <string name="x_squared">x²</string>
    <string name="square_root">√x</string>
    <string name="dot">.</string>
    <string name="sort">sort</string>
    <string name="bracket">bracket</string>
    <string name="Graph">Graph</string>
    <string name="Date">Date</string>
    <string name="Binary">Binary</string>
    <string name="Function">Function</string>
    <string name="X">X</string>
    <string name="Y">Y</string>
    <string name="Start">Start</string>
    <string name="Last">Last</string>
    <string name="Result">Result</string>
    <string name="return_back">return</string>
</resources>